# product/request/ProductRequest.go
@@ -1,0 +1,5 @@
+package request
+
+type ProductRequest struct {
+	ProductId int `json:"productId"`
+}
